src/test/deca/syntax/valid/non_provided/semi.deca
// Description:
//    Programme main avec uniquement un ';'
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2020

{
	;
}
