src/test/deca/syntax/invalid/non_provided/bad_if.deca
// Description:
//    Programme minimaliste avec erreur de syntaxe
//    dans l'utilisation de l'instruction 'if'
//
// Resultats:
//    Erreur : 12:7: missing '(' at 'true' 
//
// Historique:
//    cree le 15/01/2020

{
    if true {
        
    }
}